--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/4872a2f05f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link rel="icon" type="img/png" href="/img/favicon.png"/>
+    <script src="./js/scroll.js"></script>
 </head>
 <body>
     <div id="app"></div>
